# duckdb_mooncake

./: .gitignore  CMakeLists.txt  Makefile  README.md  extension_config.cmake  vcpkg.json
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: MainDistributionPipeline.yml
moonlink_ffi/: Cargo.toml
moonlink_ffi/src/: lib.rs
moonlink_server/: Cargo.toml
moonlink_server/src/: main.rs
src/: mooncake_extension.cpp
src/include/: mooncake_extension.hpp
src/include/moonlink/: moonlink.hpp  moonlink_ffi.hpp
src/include/storage/: mooncake_catalog.hpp  mooncake_schema.hpp  mooncake_table.hpp  mooncake_table_metadata.hpp  mooncake_transaction.hpp
src/moonlink/: moonlink.cpp
src/storage/: mooncake_catalog.cpp  mooncake_scan.cpp  mooncake_schema.cpp  mooncake_storage.cpp  mooncake_table.cpp  mooncake_table_metadata.cpp  mooncake_transaction.cpp
test/sql/: mooncake.test
